--- a/Pandas para usuarios de Excel.ipynb
+++ b/Pandas para usuarios de Excel.ipynb
@@ -12,8 +12,7 @@
     "\n",
     " ### PyConAr 2019\n",
     "\n",
-    " #### Por Fernando Gonzalez Prada\n",
-    " @fgonzalezprada"
+    " #### Por Fernando Gonzalez Prada\n"
    ]
   },
   {
@@ -5392,6 +5391,11 @@
     "Pueden bajar el código completo y los datasets completos en mi GitHub:\n",
     "\n",
     "https://github.com/fsgp/PyConAr-2019\n",
+    "\n",
+    "\n",
+    "fgonzalezprada@fgp-analytics.com\n",
+    "\n",
+    "@fgonzalezprada\n",
     "\n",
     "\n",
     "# Gracias!!!"
